** file:line
*** scenario (or step within)
*** scenario outline
*** scenario outline examples
*** line in an example table
*** background (same as whole file)
*** fix bugs in any of those cases (there are some)
** --tags
*** Link to page about tags
* Tags with arguments
* cucumber.jar + examples
** Remove need for -S cucumber
** Full jar and simple jar

== Bugfixes
* Depend on polyglot version (0.2.4) to avoid masking require errors. (Aslak Hellesøy).
* -n option does not suppress the line info for a Scenario Outline (#175 Aslak Hellesøy)
* Errors with rspec-rails matchers in cucumber 0.1.99 (#173 David Chelimsky)
* Can't use an empty string as a table value in a scenario outline (#172 Aslak Hellesøy)
* Really skip skipped steps (#90 Aslak Hellesøy)
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Sinatra Example (#204 Rob Holland)
* Keywords can be aliased in languages.yml. See English for an example (examples: Examples|Scenarios)
* Adding support for Background (#153 Joseph Wilk) 
* Added Česky/Czech (Vojtech Salbaba)
* New --no-multiline option to reduce noise. Useful if lots of features are failing.
* Added ability to pass URIs to cucumber in addition to files and directories. Useful for troubleshooting! (Aslak Hellesøy)
* Groups of tabular scenarios (#57 Aslak Hellesøy)
* Tagging scenarios and features. Pick the ones to run with --tags (#54 Aslak Hellesøy)
* Make the current scenario available to the steps. (#44 Aslak Hellesøy)
* Step definition snippets contain a 'pending' call (#84 Aslak Hellesøy)
* Call multiline steps from other steps (#144 Aslak Hellesøy)