@@ -8,6 +8,12 @@ module Cucumber
       def_delegators :@kernel, :puts, :print # win32console colours only work when sent to Kernel
       def_delegators :@stdout, :flush, :tty?
 
+      # Ensure using << still gets colours in win32console
+      def <<(output)
+        print(output)
+        self
+      end
+
       def initialize
         @kernel = Kernel
         @stdout = STDOUT
